main: item project, responsive

--- a/tekupcode/src/pages/Home/Home.scss
+++ b/tekupcode/src/pages/Home/Home.scss
@@ -1,28 +1,39 @@
+@import '../../component/GlobalStyles/GlobalStyles.scss';
+
 .project-list {
     padding: 50px 15px;
+}
 
-    .project-list_tab {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+.project-list_tab {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0px;
 
-        .project-list_tab-item{
-            padding-right: 10px;
-        }
+    .project-list_tab-item{
+        padding-right: 10px;
+    }
 
+    .btn-project-tab{
+        font-size: 18px;
+        font-weight: 600;
+        color: $text-color;
+    }
+
+    .btn-project-tab.active{
+        background: #F8D000;
+        color: $text-color;
+        box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .15);
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    
+    .project-list_tab{
         .btn-project-tab{
-            font-size: 18px;
-            font-weight: 600;
-            color: #212529;
+            font-size: 14px;
         }
-
-        .btn-project-tab.active{
-            background: #F8D000;
-            color: #212529;
-            box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .15);
-        }
-
     }
     
 }
-
