--- a/tekupcode/src/pages/Home/Home.scss
+++ b/tekupcode/src/pages/Home/Home.scss
@@ -21,11 +21,36 @@
     }
 
     .btn-project-tab.active{
-        background: #F8D000;
+        background: $bg-primary;
         color: $text-color;
         box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .15);
     }
 
+}
+
+.rounded-circle{
+    width: 50px;
+    height: 50px;
+    background: #e9ecef;
+    box-shadow: 0 0.125rem 0.375rem rgba(0, 0, 0, 0.05), 0 0.5rem 1.2rem rgba(0, 0, 0, 0.1);
+
+    .icons-btn-top{
+        margin-top: -3px;
+        font-size: 18px;
+    }
+
+    &:hover{
+        background: $bg-primary;
+    }
+
+}
+
+.back-to-top {
+    position: fixed;
+    display: none;
+    left: 30px;
+    bottom: 30px;
+    z-index: 99;
 }
 
 @media screen and (max-width: 768px) {
